Prototype for subsetResponseMixture

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export(expit)
 export(glmmMixture)
 export(logit)
 export(flowRegressionMixture)
+export(subsetResponseMixture)
 importFrom(Rcpp,sourceCpp)
 useDynLib(flowReMix)
