--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(glmmMixture)
 export(logit)
 export(flowRegressionMixture)
 export(subsetResponseMixture)
+export(subsetResponseMixtureNested)
 importFrom(Rcpp,sourceCpp)
 useDynLib(flowReMix)
