--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(logit)
 export(flowRegressionMixture)
 export(subsetResponseMixture)
 export(subsetResponseMixtureNested)
+export(subsetResponseMixtureRcpp)
 importFrom(Rcpp,sourceCpp)
 useDynLib(flowReMix)
