Updates to interface
1. Changed some input variable names according to feedback from Greg.

2. Changed method of inputting the parent count. Instead of a separate
variable, the method now expects the response to be a two column matrix
of (y, N - y).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,6 @@ export(logit)
 export(flowRegressionMixture)
 export(subsetResponseMixture)
 export(subsetResponseMixtureNested)
-export(subsetResponseMixtureRcpp)
+export(flowReMix)
 importFrom(Rcpp,sourceCpp)
 useDynLib(flowReMix)
