More updates to interface
1. Control of many fitting parameters are now controlled through a
flowReMix_control object, generated by a function of the same name.

2. Added error if response is not of the correct format.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,11 @@ Description: Fitting mixtures of generalized linear models with random effects a
 License: What license is it under?
 LazyData: TRUE
 LinkingTo: Rcpp, RcppArmadillo
-Imports: Rcpp
+Imports: Rcpp,
+    glmnet,
+    gamlss,
+    IsingFit,
+    data.table,
+    PDSCE,
+    logistf
+Suggests: ggplot2
