--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ Imports: Rcpp,
     IsingFit,
     data.table,
     PDSCE,
-    logistf
+    logistf,
+    snowfall
 Suggests: ggplot2
 RoxygenNote: 6.0.1
