--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,6 @@ export(computeGraphAUC)
 export(flowReMix)
 export(flowReMix_control)
 export(vecBetaBinomDens)
+export(dispersionMLE)
 importFrom(Rcpp,sourceCpp)
 useDynLib(flowReMix)
