lastSample and Separation updates
1. User can now specify a lastSample option which tells the sampler to
take `lastSample’ samples at the last optimization iteration.

2. Used functionalities from the brglm2 package to detect and handle
separation in the data. This however, does not solve the problem of
uncalibrated posterior probabilities for these cell-subsets.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,7 @@ Imports: Rcpp,
     glmnet,
     data.table,
     PDSCE,
-    logistf,
-    snowfall
+    brglm2
 Suggests: ggplot2
 Depends: foreach
 RoxygenNote: 6.0.1
