Small bug fix and new malaria analysis
1. Added computation of dispersion MLE to initialization routine, this
circumvents a problem which might pop up later on when glmnet fails to
fit some cell-subsets.

2. Started work on new Malaria analysis.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(computeGraphAUC)
 export(flowReMix)
+export(raIsing)
 export(flowReMix_control)
 importFrom(Rcpp,sourceCpp)
 useDynLib(flowReMix)
