Some namespace changes
ggplot2 and foreach are now imported, so they don’t need to be attached
when package is loaded.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,12 @@ export(flowReMix_control)
 export(getGraphComponents)
 export(plotBoxplot)
 export(plotROC)
+export(plotScatter)
 export(raIsing)
 export(rocTable)
 export(stabilityGraph)
+import(ggplot2)
 importFrom(Rcpp,sourceCpp)
+importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
 useDynLib(flowReMix)
