--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,9 +14,10 @@ Imports: Rcpp,
     data.table,
     PDSCE,
     brglm2,
+    doParallel,
+    foreach
 Suggests: ggplot2,
     pROC,
     reshape2,
     igraph
-Depends: foreach
 RoxygenNote: 6.0.1
