--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(rocTable)
 export(stabilityGraph)
 import(ggplot2)
 importFrom(Rcpp,sourceCpp)
+importFrom(dplyr,cummean)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 useDynLib(flowReMix)
