Some refactoring. Import dplyr and ggplot2 jitter.height=0 Progress bar for stability selection and parallel support Summary function uses non standard evaluation (unquoted variable names), and leverages the input data as part of the fit object.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports: Rcpp,
     doParallel,
     foreach,
     robustbase,
-    dplyr
+    dplyr,
+    ggplot2
 Suggests: ggplot2,
     pROC,
     reshape2,
