--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,11 @@ export(plotScatter)
 export(raIsing)
 export(rocTable)
 export(stabilityGraph)
+import(GGally)
 import(ggplot2)
+import(igraph)
+import(network)
+import(viridis)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,cummean)
 importFrom(foreach,"%dopar%")
