--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,13 +16,13 @@ export(plotScatter)
 export(raIsing)
 export(rocTable)
 export(stabilityGraph)
-import(GGally)
 import(ggplot2)
-import(igraph)
-import(network)
-import(viridis)
+importFrom(GGally,ggnet2)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,cummean)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(igraph,graph.adjacency)
+importFrom(network,network)
+importFrom(viridis,plasma)
 useDynLib(flowReMix)
