Now heavily using dplyr internally. No need for cummean Store the subject_id in the fit summary function is now compliant with the expected signature and uses NSE.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,10 +16,10 @@ export(plotScatter)
 export(raIsing)
 export(rocTable)
 export(stabilityGraph)
+import(dplyr)
 import(ggplot2)
 importFrom(GGally,ggnet2)
 importFrom(Rcpp,sourceCpp)
-importFrom(dplyr,cummean)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(igraph,graph.adjacency)
