--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,5 +24,6 @@ importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(igraph,graph.adjacency)
 importFrom(network,network)
+importFrom(rlang,enquo)
 importFrom(viridis,plasma)
 useDynLib(flowReMix)
