Fixed the issue with RV144 data preparation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(plotBoxplot)
 export(plotROC)
 export(plotRawGraph)
 export(plotScatter)
+export(plotflowReMix)
 export(raIsing)
 export(rocTable)
 export(stabilityGraph)
