--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(plotScatter)
 export(raIsing)
 export(rocTable)
 export(stabilityGraph)
+import(doRNG)
 import(dplyr)
 import(ggplot2)
 importFrom(GGally,ggnet2)
