Whole bunch of fixes for r cmd check warnings and notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,15 +16,24 @@ export(plotScatter)
 export(raIsing)
 export(rocTable)
 export(stabilityGraph)
+import(doParallel)
 import(doRNG)
 import(dplyr)
 import(ggplot2)
+import(stats)
 importFrom(GGally,ggnet2)
+importFrom(IsingFit,IsingFit)
+importFrom(R.utils,withTimeout)
 importFrom(Rcpp,sourceCpp)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(grDevices,rainbow)
+importFrom(igraph,components)
 importFrom(igraph,graph.adjacency)
 importFrom(network,network)
 importFrom(rlang,enquo)
+importFrom(utils,capture.output)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
 importFrom(viridis,plasma)
 useDynLib(flowReMix)
