--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2016-09-10
 Author: Amit Meir
 Maintainer: Amit Meir <ammeir@fhcrc.org>
 Description: Fitting mixtures of generalized linear models with random effects and subject-level treatment effects.
-License: What license is it under?
+License: MIT 
 LazyData: FALSE
 LinkingTo: Rcpp, RcppArmadillo
 Imports: Rcpp,
@@ -24,7 +24,9 @@ Imports: Rcpp,
     viridis,
     rlang,
     igraph,
-    doRNG
+    doRNG,
+    IsingFit,
+    R.utils 
 Suggests: pROC,
     reshape2,
 RoxygenNote: 6.0.1
