documentation and other tidying.

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -12,3 +12,8 @@ Simulations/*
 tables/*
 write-ups/*
 Notebooks/*
+experimental malaria figure.pdf
+experimental malaria plot2.pdf
+cluster
+porotypes
+plot2.pdf
