--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,10 @@ Type: Package
 Title: Generalized Linear Modeling of FCM Data With Clustered Coefficients
 Version: 0.1
 Date: 2016-09-10
-Author: Amit Meir
+Author: Amit Meir and Greg Finak
 Maintainer: Amit Meir <ammeir@fhcrc.org>
 Description: Fitting mixtures of generalized linear models with random effects and subject-level treatment effects.
-License: MIT 
+License: MIT + file LICENSE
 LazyData: FALSE
 LinkingTo: Rcpp, RcppArmadillo
 Imports: Rcpp,
