--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,6 @@ import(doParallel)
 import(doRNG)
 import(dplyr)
 import(ggplot2)
-import(stats)
 importFrom(GGally,ggnet2)
 importFrom(IsingFit,IsingFit)
 importFrom(R.utils,withTimeout)
@@ -32,6 +31,33 @@ importFrom(igraph,components)
 importFrom(igraph,graph.adjacency)
 importFrom(network,network)
 importFrom(rlang,enquo)
+importFrom(stats,as.formula)
+importFrom(stats,coef)
+importFrom(stats,cov.wt)
+importFrom(stats,dbinom)
+importFrom(stats,glm)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,model.offset)
+importFrom(stats,model.response)
+importFrom(stats,model.weights)
+importFrom(stats,na.pass)
+importFrom(stats,optim)
+importFrom(stats,optimize)
+importFrom(stats,p.adjust)
+importFrom(stats,pbeta)
+importFrom(stats,predict)
+importFrom(stats,pwilcox)
+importFrom(stats,rbinom)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
+importFrom(stats,t.test)
+importFrom(stats,uniroot)
+importFrom(stats,update.formula)
+importFrom(stats,var)
+importFrom(stats,weighted.mean)
+importFrom(stats,weights)
+importFrom(stats,wilcox.test)
 importFrom(utils,capture.output)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
