--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,flowReMix)
 S3method(plot,flowReMix_fdrTable)
 S3method(plot,flowReMix_stability)
+S3method(print,flowReMix)
 S3method(summary,flowReMix)
 export(computeGraphAUC)
 export(fdrTable)
