added a function to aggregate models fixed a couple of bugs in dispatch for methods that were not exported.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(plot,flowReMix_fdrTable)
 S3method(plot,flowReMix_stability)
 S3method(print,flowReMix)
 S3method(summary,flowReMix)
+export(aggregateModels)
 export(flowReMix)
 export(flowReMix_control)
 export(stabilityGraph)
@@ -30,6 +31,11 @@ importFrom(grDevices,rainbow)
 importFrom(igraph,components)
 importFrom(igraph,graph.adjacency)
 importFrom(network,network)
+importFrom(purrr,flatten)
+importFrom(purrr,map)
+importFrom(purrr,map2)
+importFrom(purrr,map2_dbl)
+importFrom(purrr,map2_df)
 importFrom(rlang,enquo)
 importFrom(robustbase,glmrob)
 importFrom(stats,as.formula)
