Added an option to sample new posteriors in stability grpah
And fixed an issue with aggregating the covariance matrices.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(stabilityGraph)
 import(doParallel)
 import(doRNG)
 import(dplyr)
+import(foreach)
 import(ggplot2)
 importFrom(GGally,ggnet2)
 importFrom(IsingFit,IsingFit)
