computeGraphAUC wasn't in sync with all the latest interface updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ import(dplyr)
 import(foreach)
 import(ggplot2)
 importFrom(GGally,ggnet2)
+importFrom(IsingFit,IsingFit)
 importFrom(PDSCE,pdsoft.cv)
 importFrom(R.utils,withTimeout)
 importFrom(Rcpp,sourceCpp)
