Make sure that input data is not data.table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,13 +14,14 @@ import(doRNG)
 import(dplyr)
 import(foreach)
 import(ggplot2)
+import(parallel)
 importFrom(GGally,ggnet2)
-importFrom(IsingFit,IsingFit)
 importFrom(PDSCE,pdsoft.cv)
 importFrom(R.utils,withTimeout)
 importFrom(Rcpp,sourceCpp)
 importFrom(brglm2,brglmFit)
 importFrom(brglm2,detect_separation)
+importFrom(data.table,is.data.table)
 importFrom(data.table,rbindlist)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
@@ -43,12 +44,9 @@ importFrom(stats,coef)
 importFrom(stats,cov.wt)
 importFrom(stats,dbinom)
 importFrom(stats,glm)
-importFrom(stats,model.frame)
-importFrom(stats,model.matrix)
 importFrom(stats,model.offset)
 importFrom(stats,model.response)
 importFrom(stats,model.weights)
-importFrom(stats,na.pass)
 importFrom(stats,optim)
 importFrom(stats,optimize)
 importFrom(stats,p.adjust)
