summarize the subset level probabilities. And a couple of fixes.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,11 +32,13 @@ importFrom(grDevices,rainbow)
 importFrom(igraph,components)
 importFrom(igraph,graph.adjacency)
 importFrom(network,network)
+importFrom(plyr,ldply)
 importFrom(purrr,flatten)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map2_dbl)
 importFrom(purrr,map2_df)
+importFrom(reshape2,melt)
 importFrom(rlang,enquo)
 importFrom(robustbase,glmrob)
 importFrom(stats,as.formula)
