import gather and spread from tidyr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,8 @@ importFrom(stats,var)
 importFrom(stats,weighted.mean)
 importFrom(stats,weights)
 importFrom(stats,wilcox.test)
+importFrom(tidyr,gather)
+importFrom(tidyr,spread)
 importFrom(utils,capture.output)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
