fast parallel implementation of stability selection

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,8 @@ importFrom(grDevices,rainbow)
 importFrom(igraph,components)
 importFrom(igraph,graph.adjacency)
 importFrom(network,network)
+importFrom(parallel,mclapply)
+importFrom(parallel,splitIndices)
 importFrom(plyr,ldply)
 importFrom(purrr,flatten)
 importFrom(purrr,map)
