some simulation functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,16 +6,21 @@ S3method(plot,flowReMix_stability)
 S3method(print,flowReMix)
 S3method(summary,flowReMix)
 export(aggregateModels)
+export(flowFitToSim)
 export(flowReMix)
 export(flowReMix_control)
+export(generateFlowDataset)
 export(stabilityGraph)
+import(IsingSampler)
 import(doParallel)
 import(doRNG)
 import(dplyr)
 import(foreach)
 import(ggplot2)
+import(mvtnorm)
 import(parallel)
 importFrom(GGally,ggnet2)
+importFrom(IsingSampler,IsingSampler)
 importFrom(PDSCE,pdsoft.cv)
 importFrom(R.utils,withTimeout)
 importFrom(Rcpp,sourceCpp)
@@ -31,6 +36,7 @@ importFrom(glmnet,predict.cv.glmnet)
 importFrom(grDevices,rainbow)
 importFrom(igraph,components)
 importFrom(igraph,graph.adjacency)
+importFrom(mvtnorm,rmvnorm)
 importFrom(network,network)
 importFrom(parallel,mclapply)
 importFrom(parallel,splitIndices)
