--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(plot,flowReMix_stability)
 S3method(print,flowReMix)
 S3method(summary,flowReMix)
 export(aggregateModels)
+export(fitFlowSim)
 export(flowFitToSim)
 export(flowReMix)
 export(flowReMix_control)
