adding utility functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method(summary,flowReMix)
 export(aggregateModels)
 export(flowReMix)
 export(flowReMix_control)
+export(getPosteriors)
+export(getSubsets)
 export(stabilityGraph)
 import(doParallel)
 import(doRNG)
