Some utility functions to extract the PFS, compute weights, etc. Tests to come..

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,14 +6,18 @@ S3method(plot,flowReMix_stability)
 S3method(print,flowReMix)
 S3method(summary,flowReMix)
 export(aggregateModels)
+export(degreeFromStringFun)
 export(fitFlowSim)
 export(flowFitToSim)
 export(flowReMix)
+export(flowReMixPFS)
 export(flowReMix_control)
+export(generateFlowDataset)
+export(getIsing)
 export(getPosteriors)
 export(getSubsets)
-export(generateFlowDataset)
 export(stabilityGraph)
+export(weightForPFS)
 import(IsingSampler)
 import(doParallel)
 import(doRNG)
