big memory implementation seems to work

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,13 @@
 S3method(plot,flowReMix)
 S3method(plot,flowReMix_fdrTable)
 S3method(plot,flowReMix_stability)
-S3method(print,flowReMix)
 S3method(summary,flowReMix)
 export(aggregateModels)
 export(flowReMix)
 export(flowReMix_control)
+export(print.flowReMix)
 export(stabilityGraph)
+import(bigmemory)
 import(doParallel)
 import(doRNG)
 import(dplyr)
