--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,18 +61,24 @@ importFrom(stats,coef)
 importFrom(stats,cov.wt)
 importFrom(stats,dbinom)
 importFrom(stats,glm)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
 importFrom(stats,model.offset)
 importFrom(stats,model.response)
 importFrom(stats,model.weights)
+importFrom(stats,na.omit)
+importFrom(stats,na.pass)
 importFrom(stats,optim)
 importFrom(stats,optimize)
 importFrom(stats,p.adjust)
 importFrom(stats,pbeta)
 importFrom(stats,predict)
 importFrom(stats,pwilcox)
+importFrom(stats,quantile)
 importFrom(stats,rbinom)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
+importFrom(stats,sd)
 importFrom(stats,t.test)
 importFrom(stats,uniroot)
 importFrom(stats,update.formula)
@@ -83,6 +89,7 @@ importFrom(stats,wilcox.test)
 importFrom(tidyr,gather)
 importFrom(tidyr,spread)
 importFrom(utils,capture.output)
+importFrom(utils,getFromNamespace)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(viridis,plasma)
