new plotting functions and documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,9 @@ export(generateFlowDataset)
 export(getIsing)
 export(getPosteriors)
 export(getSubsets)
+export(parser)
+export(plotChordDiagram)
+export(plotIsingGraph)
 export(stabilityGraph)
 export(weightForPFS)
 import(IsingSampler)
@@ -43,6 +46,7 @@ importFrom(glmnet,predict.cv.glmnet)
 importFrom(grDevices,rainbow)
 importFrom(igraph,components)
 importFrom(igraph,graph.adjacency)
+importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(mvtnorm,rmvnorm)
 importFrom(network,network)
 importFrom(parallel,mclapply)
@@ -86,8 +90,12 @@ importFrom(stats,var)
 importFrom(stats,weighted.mean)
 importFrom(stats,weights)
 importFrom(stats,wilcox.test)
+importFrom(tidygraph,as_tbl_graph)
+importFrom(tidygraph,group_components)
 importFrom(tidyr,gather)
+importFrom(tidyr,separate)
 importFrom(tidyr,spread)
+importFrom(tidyr,unnest)
 importFrom(utils,capture.output)
 importFrom(utils,getFromNamespace)
 importFrom(utils,setTxtProgressBar)
