--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(plotIsingGraph)
 export(stabilityGraph)
 export(weightForPFS)
 import(IsingSampler)
+import(circlize)
 import(doParallel)
 import(doRNG)
 import(dplyr)
@@ -33,6 +34,7 @@ importFrom(GGally,ggnet2)
 importFrom(IsingSampler,IsingSampler)
 importFrom(PDSCE,pdsoft.cv)
 importFrom(R.utils,withTimeout)
+importFrom(RColorBrewer,brewer.pal.info)
 importFrom(Rcpp,sourceCpp)
 importFrom(brglm2,brglmFit)
 importFrom(brglm2,detect_separation)
@@ -59,7 +61,9 @@ importFrom(purrr,map2_dbl)
 importFrom(purrr,map2_df)
 importFrom(reshape2,melt)
 importFrom(rlang,enquo)
+importFrom(rlang,sym)
 importFrom(robustbase,glmrob)
+importFrom(scales,brewer_pal)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,cov.wt)
