--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ importFrom(stats,var)
 importFrom(stats,weighted.mean)
 importFrom(stats,weights)
 importFrom(stats,wilcox.test)
+importFrom(tidygraph,activate)
 importFrom(tidygraph,as_tbl_graph)
 importFrom(tidygraph,group_components)
 importFrom(tidyr,gather)
