--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: flowReMix
 Type: Package
 Title: Generalized Linear Modeling of FCM Data With Clustered Coefficients
-Version: 0.2
+Version: 0.1
 Date: 2016-09-10
 Author: Amit Meir and Greg Finak
 Maintainer: Amit Meir <ammeir@fhcrc.org>
 Description: Fitting mixtures of generalized linear models with random effects and subject-level treatment effects.
 License: MIT + file LICENSE
 LazyData: FALSE
-LinkingTo: Rcpp, RcppArmadillo, RcppProgress
+LinkingTo: Rcpp, RcppArmadillo
 Imports: Rcpp,
     glmnet,
     data.table,
