fix some omp pragmas causing errors in gcc

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,10 @@ data/rv144.rda
 data/malaria.rda
 data/*
 data-raw/*
-
+*.rds
 Data Analysis/results/*
 Data Analysis/old/*
+Data Analysis/*
 tables/*
 write-ups/*
 figures/*
