Make scatter plots reflect how preassignment is done. Add a couple of utility methods to get a flowReMix suitable input table from a list of COMPASSContainer objects. Translate COMPASS marker names to flowReMix suitable format.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(plot,flowReMix_fdrTable)
 S3method(plot,flowReMix_stability)
 S3method(print,flowReMix)
 S3method(summary,flowReMix)
+export(FlowReMixFromCOMPASSContainers)
 export(aggregateModels)
 export(degreeFromStringFun)
 export(fitFlowSim)
@@ -20,6 +21,7 @@ export(parser)
 export(plotChordDiagram)
 export(plotIsingGraph)
 export(stabilityGraph)
+export(translateCOMPASStoflowReMixNames)
 export(weightForPFS)
 export(zeroPosteriorProbs)
 import(IsingSampler)
