Firth Regression and stimulation model
1. Implemented the stimulationModel function which takes a dataset and
prepares it to a stimulationXsubset response analysis.

2. Added option to use firth regression.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(parser)
 export(plotChordDiagram)
 export(plotIsingGraph)
 export(stabilityGraph)
+export(stimulationModel)
 export(translateCOMPASStoflowReMixNames)
 export(weightForPFS)
 export(zeroPosteriorProbs)
