--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ import(foreach)
 import(ggplot2)
 import(mvtnorm)
 import(parallel)
+import(tidyr)
 importFrom(GGally,ggnet2)
 importFrom(IsingSampler,IsingSampler)
 importFrom(PDSCE,pdsoft.cv)
