--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(generateFlowDataset)
 export(getIsing)
 export(getPosteriors)
 export(getSubsets)
+export(hcIndex)
 export(parser)
 export(plotChordDiagram)
 export(plotIsingGraph)
