--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ importFrom(igraph,graph.adjacency)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(mvtnorm,rmvnorm)
 importFrom(network,network)
+importFrom(pROC,roc)
 importFrom(parallel,mclapply)
 importFrom(parallel,splitIndices)
 importFrom(plyr,ldply)
