HVTN105 + other updates
1. Added a firth regression step for cell-subsets where full separation
occurs. Seems to improve stability in HVTN505 results.

2. Wrote a function for imputing random effects for non existent
cell-subsets

3. Similarly, if a cell-subset doesn’t exist, the Ising assignment will
be 0.5, so it is replaced by 0.

4. When initially estimating the covariance for the random effects, an
‘na.rm’ option is necessary because random effects of missing
cell-subsets are going to be NA.

5. Wrote routines for conducting the initial screening of cell-subsets
based on a mixed effect model with a random effect for over dispersion
and a random effect per subject (similar to the flow-cytometry analysis
pipeline paper).

6. HVTN105 analysis seems to be running and initial runs look good!

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -3,6 +3,7 @@
 data-raw/*
 figures/*
 Notebooks/*
+tex/*
 prototypes/*
 Data Analysis/*
 Data Analysis/results/*
@@ -13,11 +14,12 @@ Simulations/*
 tables/*
 write-ups/*
 Notebooks/*
+cluster/hvtn/results/*
 summarize.R
 summarizeAggregates.R
 experimental malaria figure.pdf
 experimental malaria plot2.pdf
-cluster
+cluster/*
 porotypes
 plot2.pdf
 ./*.rds
