Updated documentation to address errors.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(generateFlowDataset)
 export(getIsing)
 export(getPosteriors)
 export(getSubsets)
+export(hcIndex)
 export(parser)
 export(plotChordDiagram)
 export(plotIsingGraph)
@@ -32,6 +33,7 @@ import(doRNG)
 import(dplyr)
 import(foreach)
 import(ggplot2)
+import(ggraph)
 import(mvtnorm)
 import(parallel)
 importFrom(GGally,ggnet2)
@@ -50,7 +52,9 @@ importFrom(foreach,foreach)
 importFrom(glmnet,coef.cv.glmnet)
 importFrom(glmnet,cv.glmnet)
 importFrom(glmnet,predict.cv.glmnet)
+importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,rainbow)
+importFrom(graphics,plot)
 importFrom(igraph,components)
 importFrom(igraph,graph.adjacency)
 importFrom(igraph,graph_from_adjacency_matrix)
@@ -69,11 +73,14 @@ importFrom(rlang,enquo)
 importFrom(rlang,sym)
 importFrom(robustbase,glmrob)
 importFrom(scales,brewer_pal)
+importFrom(stats,aggregate)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
 importFrom(stats,cov.wt)
 importFrom(stats,dbinom)
 importFrom(stats,glm)
+importFrom(stats,lm)
+importFrom(stats,median)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,model.offset)
