--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: flowReMix
 Type: Package
 Title: Generalized Linear Modeling of FCM Data With Clustered Coefficients
-Version: 0.2
+Version: 0.3
 Date: 2016-09-10
 Author: Amit Meir and Greg Finak
 Maintainer: Amit Meir <ammeir@fhcrc.org>
@@ -33,11 +33,11 @@ Imports: Rcpp,
     purrr,
     reshape2,
     tidyr,
+    ggraph,
     circlize, 
     scales,
     tidygraph,
     RColorBrewer 
 Suggests: pROC,
-    reshape2,
     testthat
 RoxygenNote: 6.0.1
