--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,5 @@ Imports: Rcpp,
     tidygraph,
     RColorBrewer, 
     pROC
-Suggests: reshape2,
-    testthat
+Suggests: testthat
 RoxygenNote: 6.0.1
